<resources>
    <string name="app_name">Caderno de campo</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!--Colors-->

    <string name="plantio">#034204</string>
    <string name="agrotoxico">#DCF109</string>
    <string name="irrigacao">#1733DA</string>
    <string name="adubacao">#F5896C</string>
    <string name="prejuizo">#FF1100</string>
    <string name="mao_de_obra">#48D3BC</string>
    <string name="colheita">#00FF03</string>

    <!--Login-->
    <string name="entrar">Entrar</string>
    <string name="rmb">Lembrar minha senha</string>
    <string name="crtConta">Criar conta</string>
    <string name="email">email</string>
    <string name="senha">senha</string>
    <string name="verifica">Gerar código</string>
    <string name="validar">Validar</string>

    <!--Main-->
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <!--Menu drawer-->
    <string name="menu_main">Início</string>
    <string name="menu_area">Áreas em produção</string>
    <string name="menu_fechado">Produção fechada</string>
    <string name="menu_qrcode">QR Codes</string>
    <string name="menu_opt">Opções</string>
    <string name="menu_sair">Sair</string>

    <!--AreaView Adapter-->
    <string name="varea_imagem">Imagem da area</string>
    <string name="varea_nome">Codigo da area</string>

    <!--Area Alter Fragment-->

    <string name="alter_area">Alterar</string>
    <string name="cria_area">Criar</string>

    <!--QR View Adapter-->
    <string name="vqr_imagem">Qr imagem</string>

    <!--Common Assets-->
    <string name="btn_excluir">Botão excluir</string>
    <string name="btn_alterar">Botão alterar</string>
    <string name="btn_novo">Botão novo</string>
    <string name="cancelar">Cancelar</string>

    <!-- Spinners-->
    <string-array name="LoteContArray">
        <item>Data + Letra</item>
        <item>Data + Número</item>
    </string-array>

    <string-array name="EntradaTipo">
        <item>Escolha um tipo</item>
        <item>plantio</item>
        <item>adubação</item>
        <item>agrotóxico</item>
        <item>colheita</item>
        <item>mão de obra</item>
        <item>prejuízo</item>
        <item>irrigação</item>

    </string-array>

    <string-array name="EntradaTipoTempo">
        <item>Horas</item>
        <item>Minutos</item>
    </string-array>

    <string-array name="EntradaTipoQuantidade">
        <item>Sacos</item>
        <item>Caixas</item>
        <item>KG</item>
    </string-array>

    <string-array name="EntradaTipoDose">
        <item>ml</item>
        <item>mg</item>
        <item>g</item>
    </string-array>

    <string-array name="EntradaTempoCarencia">
        <item>Dias</item>
        <item>Horas</item>
    </string-array>


    <string name="spi_data">Data + Letra</string>
    <string name="spi_num">Data + Numero</string>


</resources>
