<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="wrap_content" android:orientation="vertical"
              android:background="@drawable/btn_round_edges_brown_border"
              android:layout_marginTop="10dp" android:layout_marginRight="5dp" android:layout_marginLeft="5dp">
    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp">

        <ImageView
                android:layout_width="0dp"
                android:layout_height="237dp" app:srcCompat="@drawable/repolho_roxo"
                android:id="@+id/imgAreaAdapter" app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toTopOf="parent" app:layout_constraintHorizontal_bias="0.024"
                app:layout_constraintVertical_bias="0.0" android:scaleType="centerCrop"
                android:contentDescription="@string/varea_imagem"/>
        <LinearLayout
                android:orientation="horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="8dp"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="8dp" app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imgAreaAdapter"
                android:background="@color/white">
            <TextView
                    android:text="@string/varea_nome"
                    android:layout_width="232dp"
                    android:layout_height="match_parent" android:id="@+id/txtNome_AreaAdapter"
                    android:layout_weight="1" android:textAlignment="center" android:textSize="18sp"
                    android:gravity="center"/>
            <ImageButton
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:id="@+id/imgbtnDelete_AreaAdapter" android:layout_weight="1"
                    android:contentDescription="@string/btn_excluir"
                    tools:srcCompat="@drawable/baseline_delete_outline_black_24"
                    android:background="@color/white"
                    tools:src="@drawable/baseline_delete_outline_black_24"
                    app:srcCompat="@drawable/baseline_delete_outline_black_24"/>
            <ImageButton
                    android:layout_width="50dp"
                    android:layout_height="50dp" app:srcCompat="@drawable/baseline_create_black_24"
                    android:id="@+id/imgbtnAlterar_AreaAdapter" android:layout_weight="1"
                    android:contentDescription="@string/btn_alterar"
                    tools:srcCompat="@drawable/baseline_create_black_24" android:background="#00FFFFFF"/>
            <ImageButton
                    android:layout_width="50dp"
                    android:layout_height="50dp" app:srcCompat="@drawable/baseline_add_box_black_24"
                    android:id="@+id/imgbtnNovo_AreaAdapter" android:layout_weight="1"
                    android:contentDescription="@string/btn_novo"
                    tools:srcCompat="@drawable/baseline_add_box_black_24" android:background="#00FFFFFF"/>
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</LinearLayout>
