<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             tools:context="com.trabalho.tg.LoginFragment" android:id="@+id/frmLayoutLogin">
    <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent" android:background="#FFFFFF">

        <EditText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:ems="10"
                android:id="@+id/edtEmail_Login"
                app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="36dp"
                android:layout_marginStart="36dp" app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="36dp" android:layout_marginRight="36dp" android:layout_marginTop="152dp"
                app:layout_constraintTop_toTopOf="parent" app:layout_constraintHorizontal_bias="0.0"
                android:hint="@string/email"/>
        <EditText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:ems="10"
                android:id="@+id/edtSenha_Login"
                app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="36dp"
                android:layout_marginStart="36dp" app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="36dp" android:layout_marginRight="36dp" android:layout_marginTop="44dp"
                app:layout_constraintTop_toBottomOf="@+id/edtEmail_Login" app:layout_constraintHorizontal_bias="0.0"
                android:hint="@string/senha"/>
        <TextView
                android:text="@string/rmb"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/txtLembrar_Login" app:layout_constraintStart_toStartOf="parent"
                android:layout_marginLeft="8dp"
                android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="8dp" android:layout_marginRight="8dp" android:layout_marginTop="40dp"
                app:layout_constraintTop_toBottomOf="@+id/edtSenha_Login" android:textSize="18sp"/>
        <Button
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/btnEntrar_Login" app:layout_constraintStart_toStartOf="parent"
                android:layout_marginLeft="36dp"
                android:layout_marginStart="36dp" app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="36dp" android:layout_marginRight="36dp" android:layout_marginTop="68dp"
                app:layout_constraintTop_toBottomOf="@+id/txtLembrar_Login" app:layout_constraintHorizontal_bias="0.498"
                tools:text="@string/entrar"/>
        <Button
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/btnCriar_Login" app:layout_constraintStart_toStartOf="parent"
                android:layout_marginLeft="36dp"
                android:layout_marginStart="36dp" app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="36dp" android:layout_marginRight="36dp" android:layout_marginTop="28dp"
                app:layout_constraintTop_toBottomOf="@+id/btnEntrar_Login" app:layout_constraintHorizontal_bias="0.0"
                tools:text="@string/crtConta" android:layout_marginBottom="8dp"
                app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintVertical_bias="0.049"/>
    </android.support.constraint.ConstraintLayout>
</FrameLayout>